# dtcpay-rs

./: .env  .gitignore  Cargo.toml  README.md
crates/api_models/: Cargo.toml
crates/api_models/src/: api_keys.rs
crates/api_models/src/errors/: mod.rs  types.rs
crates/api_models/src/payments/: additional_info.rs
crates/api_models/src/user/: dashboard_metadata.rs
crates/common_enums/: Cargo.toml
crates/common_enums/src/: enums.rs  lib.rs  transformers.rs
crates/router/: Cargo.toml
crates/router/src/configs/: user.rs
crates/router/src/db/: authorization.rs
src/: controller.rs  db.rs  lib.rs  main.rs  models.rs  utils.rs
src/entity/: mod.rs  user.rs
