[package]
name = "dtcpay-rs"
version = "0.1.0"
edition = "2021"
authors = ["kevin.xie"]

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = "1.1.0-rc.1", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
sea-orm-migration = "0.12.15"
serde = {version= "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
dotenvy = "0.15.7"
rust_decimal = {version = "1.36.0", features = ["serde", "tokio-postgres"]}
chrono = {version = "0.4.38", features = ["serde"]}
