[package]
name = "dtcpay-rs"
version = "0.1.0"
edition = "2021"
authors = ["kevin.xie"]

[dependencies]
axum = "0.8.0-alpha.1"
tokio = { version = "1", features = ["full"]}
serde = {version= "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
dotenvy = "0.15.7"
rust_decimal = {version = "1.36.0", features = ["serde", "tokio-postgres"]}
chrono = {version = "0.4.38", features = ["serde"]}
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls", "macros"]}
sea-orm = { version = "1.1.1", features = ["sqlx-mysql", "runtime-async-std-native-tls"]}

